--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 #Ignore List
 .project
 .settings
+
+#simple-module-core
 simple-module-core/target
+simple-module-core/.classpath
+simple-module-core/.springBeans
+
+#simple-module-web
 simple-module-web/target
+simple-module-web/.classpath
+simple-module-web/.springBeans
