--- a/simple-module-core/pom.xml
+++ b/simple-module-core/pom.xml
@@ -16,7 +16,9 @@
 	<properties>
 		<maven.test.skip>true</maven.test.skip>
 		<querydsl.directory>${basedir}/src/main/querydsl</querydsl.directory>
-		<org.hibernate-version>4.2.0.Final</org.hibernate-version>
+		<org.hibernate.version>4.2.0.Final</org.hibernate.version>
+        <org.thymeleaf.version>2.0.17</org.thymeleaf.version>
+        <com.jolbox.version>0.8.0-rc1</com.jolbox.version>
 	</properties>
 
 	<build>
@@ -156,7 +158,7 @@
 	</build>
 
 	<dependencies>
-		<!-- Spring -->
+		<!-- Spring Framework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -199,8 +201,6 @@
 			<artifactId>spring-aspects</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-
-		<!-- data -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
@@ -217,7 +217,19 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
-		<!-- spring-data-jpa -->
+        <!-- BoneCP : http://jolbox.com/ -->
+        <dependency>
+            <groupId>com.jolbox</groupId>
+            <artifactId>bonecp</artifactId>
+            <version>${com.jolbox.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jolbox</groupId>
+            <artifactId>bonecp-spring</artifactId>
+            <version>0.8.0-rc1</version>
+        </dependency>
+
+		<!-- Spring Data JPA : http://www.springsource.org/spring-data/jpa -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
@@ -234,6 +246,7 @@
 			<artifactId>joda-time-hibernate</artifactId>
 			<version>1.3</version>
 		</dependency>
+
 		<!-- QueryDSL -->
 		<dependency>
 			<groupId>com.mysema.querydsl</groupId>
@@ -253,7 +266,7 @@
 			<version>3.1.0</version>
 		</dependency>
 
-		<!-- spring aop dependency -->
+		<!-- Spring AOP dependency -->
 		<dependency>
 			<groupId>aopalliance</groupId>
 			<artifactId>aopalliance</artifactId>
@@ -298,12 +311,12 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>${org.hibernate-version}</version>
+			<version>${org.hibernate.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>${org.hibernate-version}</version>
+			<version>${org.hibernate.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>cglib</artifactId>
@@ -314,17 +327,17 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-c3p0</artifactId>
-			<version>${org.hibernate-version}</version>
+			<version>${org.hibernate.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>${org.hibernate-version}</version>
+			<version>${org.hibernate.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-envers</artifactId>
-			<version>${org.hibernate-version}</version>
+			<version>${org.hibernate.version}</version>
 		</dependency>
 
 		<!-- google-guava -->
@@ -377,11 +390,17 @@
 			<version>1.1</version>
 		</dependency>
 
-		<!-- StringTemplate - http://www.stringtemplate.org/ -->
-		<dependency>
-			<groupId>org.antlr</groupId>
-			<artifactId>ST4</artifactId>
-			<version>4.0.4</version>
-		</dependency>
+		<!-- Thymeleaf(Template Engine) : http://www.thymeleaf.org-->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>${org.thymeleaf.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring3</artifactId>
+            <version>2.0.17</version>
+        </dependency>
 	</dependencies>
 </project>
