--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,11 @@
 	</profiles>
 
 	<properties>
+        <wtp.context.name></wtp.context.name>
 		<java-version>1.6</java-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<org.springframework-version>3.2.2.RELEASE</org.springframework-version>
+		<org.springframework.version>3.2.2.RELEASE</org.springframework.version>
 		<org.aspectj-version>1.6.12</org.aspectj-version>
 
 		<!-- source directory properties -->
@@ -109,7 +110,7 @@
 					<additionalBuildcommands>
 						<buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
 					</additionalBuildcommands>
-					<downloadSource>true</downloadSource>
+					<downloadSources>true</downloadSources>
 					<downloadJavadocs>true</downloadJavadocs>
 					<wtpversion>2.0</wtpversion>
 					<wtpContextName>${wtp.context.name}</wtpContextName>
@@ -130,7 +131,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>${org.springframework-version}</version>
+            <version>${org.springframework.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
