--- a/simple-module-web/pom.xml
+++ b/simple-module-web/pom.xml
@@ -82,12 +82,12 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>${org.springframework-version}</version>
+            <version>${org.springframework.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${org.springframework-version}</version>
+            <version>${org.springframework.version}</version>
         </dependency>
 
         <!-- Apache Commons - http://commons.apache.org/ -->
